<resources>
    <string name="app">Resto</string>
    <string name="back">Retour</string>
    <string name="content">clipartfest.com</string>
    <string name="dessert">Desserts</string>
    <string name="dish">Plats</string>
    <string name="drink">Boissons</string>
    <string name="entry">Entrée</string>
    <string name="errConnection">Erreur de connexion</string>
    <string name="errFirstName">Veuillez rentrer un prénom</string>
    <string name="errLastName">Veuillez rentrer un nom</string>
    <string name="errNfc">NFC n\'est pas disponible dans cet appareil</string>
    <string name="errPassword">Veuillez rentrer un mot de passe</string>
    <string name="errPhone">Veuillez rentrer un numèro de téléphone</string>
    <string name="errSelect">Veuillez sélectionner un menu</string>
    <string name="exit">Se déconnecter</string>
    <string name="firstName">Prénom</string>
    <string name="gold">€</string>
    <string name="lastName">Nom</string>
    <string name="login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="phone">Téléphone</string>
    <string name="sign">S\'inscrire</string>
    <string name="tag">Passez votre TAG</string>
    <string name="validate">Valider</string>
</resources>
