<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary"
        android:hint="@string/firstName" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary"
        android:hint="@string/lastName" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="phone"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sign"
        android:textSize="@dimen/textSize2"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/lblBack"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
