<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/imgApp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:contentDescription="@string/app"
        app:srcCompat="@drawable/app" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="phone"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/textSize2"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/lblSign"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/sign"
        android:textSize="@dimen/textSize1"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
